18 July 2007: Wouter
	- do not query addresses, 127.0.0.1, and ::1 by default.

17 July 2007: Wouter
	- forward zone options in config file.
	- forward per zone in iterator. takes precendence over stubs.
	- fixup commithooks.
	- removed forward-to and forward-to-port features, subsumed by
	  new forward zones.
	- fix parser to handle absent server: clause.
	- change untrusted rrset test to account for scrubber that is now
	  applied during the test (which removes the poison, by the way).
	- feature, addresses can be specified with @portnumber, like nsd.conf.
	- test config files changed over to new forwarder syntax.

27 June 2007: Wouter
	- delete of mesh does a postorder traverse of the tree.
	- found and fixed a memory leak. For TTL=0 messages, that would
	  not be cached, instead the msg-replyinfo structure was leaked.
	- changed server selection so it will filter out hosts that are
	  unresponsive. This is defined as a host with the maximum rto value.
	  This means that unbound tried the host for retries up to 120 secs.
	  The rto value will time out after host-ttl seconds from the cache.
	  This keeps such unresolvable queries from taking up resources.
	- utility for keeping histogram.

26 June 2007: Wouter
	- mesh is called by worker, and iterator uses it.
	  This removes the hierarchical code.
	  QueryTargets state and Finished state are merged for iterator.
	- forwarder mode no longer sets AA bit on first reply.
	- rcode in walk_supers is not needed.

25 June 2007: Wouter
	- more mesh work.
	- error encode routine for ease.

22 June 2007: Wouter
	- removed unused _node iterator value from rbtree_t. Takes up space.
	- iterator can handle querytargets state without a delegation point
	  set, so that a priming(stub) subquery error can be handled.
	- iterator stores if it is priming or not.
	- log_query_info() neater logging.
	- changed iterator so that it does not alter module_qstate.qinfo
	  but keeps a chase query info. Also query_flags are not altered,