@@ -1,3 +1,6 @@
+19 July 2007: Wouter
+	- shuffle NS selection when getting nameserver target addresses.
+
 18 July 2007: Wouter
 	- do not query addresses, 127.0.0.1, and ::1 by default.
 
